--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,7 +6,7 @@ COPY package*.json ./
 RUN npm ci
 
 COPY . .
-RUN npm run build
+RUN npm run build --configuration=production
 
 FROM nginx:alpine
 COPY ./nginx.dev.conf /etc/nginx/conf.d/default.conf
